# Rust-2024

./: README.md
advance-feature/: Cargo.toml  README.md
advance-feature/src/: main.rs
axum-app/: Cargo.toml
axum-app/src/: error.rs  lib.rs  main.rs  model.rs
axum-app/src/rjwt/: hash_encyto.rs  jwt.rs  mod.rs
axum-app/src/web/: mod.rs  mw_auth.rs  routes_login.rs  routes_tickets.rs
axum-app/static/: index.html
axum-app/tests/: quick_dev.rs
closure-update/: Cargo.toml  README.md
closure-update/src/: lib.rs
currency/: README.md
currency/src/: main.rs
minigrep/: Cargo.toml  README.md  error.txt  poem.txt
minigrep/src/: lib.rs  main.rs
mul-thread/: 404.html  hello.html
mul-thread/src/: lib.rs  main.rs
smart-ref/: Cargo.toml
smart-ref/src/: lib.rs  main.rs
test1/src/: main.rs
tshirts/src/: lib.rs  main.rs
