[package]
name = "axum-app"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
chrono = "0.4.38"
data-encoding = "2.6.0"
hex = "0.4.3"
hmac = "0.12.1"
md5 = "0.7.0"
rand = "0.8.5"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
sha2 = "0.10.8"
tokio = { version = "1.38.0", features = ["full"] }
tower-cookies = "0.10.0"
tower-http = { version = "0.5.2", features = ["fs"] }
uuid = { version = "1.10.0", features = ["serde", "v4"] }

[dev-dependencies]
anyhow = "1"
httpc-test= "0.1.1"
